--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Vocabulary</title>
+    <!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boyd Vocabulary</title>
     <style>
         body { /* 設定整體頁面的字型、邊距與背景顏色 */
             font-family: Arial, sans-serif;
@@ -88,7 +94,7 @@
             display: block;
             width: 150px;
             height: 50px;
-            background-color: #007bff;
+            background-color: #424d57;
             color: white;
             font-size: 18px;
             border-radius: 25px;
@@ -99,7 +105,13 @@
             font-weight: bold;
         }
         .button:hover { /* 設定按鈕懸停時的顏色變化 */
-            background-color: #0056b3;
+            background-color: #6e8191;
+        }
+        .back-button { /* 設定返回按鈕的樣式為灰色 */
+            background-color: #424d57; /* 灰色背景 */
+        }
+        .back-button:hover {
+            background-color: #6e8191; /* 懸停時變深灰色 */
         }
         .audio-controls { /* 設定音頻控制按鈕的樣式與固定底部位置 */
             display: flex;
