--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: none;
             position: relative;
+            font-size: 12px; /* 調整這裡的字型大小 */
         }
         #meaningContainer { /* 設定英文解釋區域的滾動效果 */
             max-height: 300px;
@@ -89,7 +90,11 @@
             background: #f9f9f9;
             padding: 10px;
             border-radius: 10px;
+            font-size: 18px; /* 調整這裡的字型大小 */
         }
+        #chineseContainer {
+           font-size: 15px; /* 調整這裡的字型大小 */
+           }
         .button { /* 設定所有按鈕的基本樣式 */
             display: block;
             width: 150px;
