--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ function showDetails(word) {
             <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/rewind.svg" alt="Rewind" width="24" height="24" /> -5s
         </button>
         <button class='audio-btn' id='pauseResumeBtn' onclick='togglePauseAudio(this)'>
-            <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/pause.svg" alt="Pause" width="24" height="24" /> pause
+            <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/pause.svg" alt="Pause" width="24" height="24" /> Stop
         </button>
         <button class='audio-btn' onclick='adjustAudioTime(5)'>
             <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/fast-forward.svg" alt="Fast Forward" width="24" height="24" /> +5s
