--- a/index.html
+++ b/index.html
@@ -133,23 +133,26 @@
            font-weight: bold;
            cursor: pointer;
            z-index: 10;       /* 確保不被其他內容擋住 */
-}
+          }
 
-.back-button:hover {
-    background-color: #6e8191;
-}
+         .back-button:hover {
+             background-color: #6e8191;
+             }
         .audio-controls { /* 設定音頻控制按鈕的樣式與固定底部位置 */
+            width: 100%; /* 或者設定為具體的數值，如 300px */
+            max-width: 100%; /* 確保不會超過父容器 */
+            height: auto; /* 根據內容自動調整高度 */
+            padding: 10px; /* 增加內邊距，避免按鈕緊貼邊框 */
             display: flex;
-            justify-content: space-around;
+            justify-content: space-around;/* 按鈕水平均勻分佈 */
             align-items: center;
             background: white;
-            padding: 10px;
             border-radius: 10px;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-            position: sticky; /* 讓按鈕固定在底部 */
+            position: fixed; /* 固定在頁面底部 */
             bottom: 0;
             left: 0;
-            width: 100%;
+            z-index: 10; /* 確保它在頁面最上層 */
         }
         .audio-btn { /* 設定音頻按鈕的樣式 */
             display: flex; /* 讓按鈕內的內容可以使用 Flexbox 對齊 */
@@ -174,6 +177,8 @@
             transition: transform 0.3s ease;
             width: 24px;
             height: 24px;
+            max-width: 100%;   /* 保證圖標不會超出容器 */
+            max-height: 100%;  /* 保證圖標不會超出容器 */
         }
         .audio-btn:hover img {
              transform: scale(1.2);  /* 按鈕滑鼠懸停時稍微放大 */
