--- a/index.html
+++ b/index.html
@@ -6,35 +6,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h1>Boyd Vocabulary</h1>
-    <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
-        <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
+    <h1>Boyd Vocabulary</h1>
+<div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
+    <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
+</div>
+<div class="alphabet-container">
+    <script>
+        document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => `<button class='letter-btn' onclick='showWords("letter", "${l.toLowerCase()}")'>${l}</button>`).join(" "));
+    </script>
+</div>
+<div class="category-container" id="categoryButtons"></div>
+<div class="level-container" id="levelButtons"></div>
+<div class="container">
+    <div id="wordList" class="word-list">
+        <button class="button back-button" onclick="backToFirstLayer()">Back</button>
+        <div id="wordItems"></div>
     </div>
-    <div class="alphabet-container">
-        <script>
-            document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => `<button class='letter-btn' onclick='showWords("letter", "${l.toLowerCase()}")'>${l}</button>`).join(" "));
-        </script>
-    </div>
-    <div class="category-container" id="categoryButtons"></div>
-    <div class="level-container" id="levelButtons"></div>
-    <div class="container">
-        <div id="wordList" class="word-list">
-            <button class="button back-button" onclick="backToFirstLayer()">Back</button>
-            <div id="wordItems"></div>
+    <div id="wordDetails" class="details">
+        <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
+            <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
+            <button id="bButton" class="button">B</button>
         </div>
-        <div id="wordDetails" class="details">
-            <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
-                <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
-                <button id="bButton" class="button">B</button>
-            </div>
-            <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
-            <button class="button" onclick="backToWordList()">Back</button>
-            <h2 id="wordTitle"></h2>
-            <div id="phoneticContainer"></div>
-            <div id="chineseContainer"></div>
-            <div id="meaningContainer"></div>
-        </div>
+        <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
+        <button class="button" onclick="backToWordList()">Back</button>
+        <h2 id="wordTitle"></h2>
+        <div id="phoneticContainer"></div>
+        <div id="chineseContainer"></div>
+        <div id="meaningContainer"></div>
+
+        <!-- 新增筆記功能 -->
+        <h3>筆記</h3>
+        <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 100px;"></textarea>
+        <button onclick="saveNote()">保存筆記</button>
+        <p id="savedNote"></p>
     </div>
+</div>
 
     <script>
 let historyStack = []; // 記錄所有歷史狀態
