--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         <div id="chineseContainer"></div>
         <div id="meaningContainer"></div>
 
-        <!-- 新增筆記功能 -->
-        <h3>筆記</h3>
-        <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 100px;"></textarea>
-        <button onclick="saveNote()">保存筆記</button>
-        <p id="savedNote"></p>
+        <!-- 筆記區塊 -->
+<div style="display: flex; align-items: center; justify-content: space-between;">
+    <h3>筆記</h3>
+    <button onclick="saveNote()" style="padding: 5px 10px; font-size: 14px; border: none; background: #007bff; color: white; border-radius: 5px; cursor: pointer;">保存筆記</button>
+</div>
+<textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 100px;"></textarea>
+<p id="savedNote"></p>
     </div>
 </div>
 
